--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -1,15 +1,19 @@
 {
-  "name": "@tunelite/functions",
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "test": "sst bind vitest",
-    "typecheck": "tsc -noEmit"
-  },
-  "devDependencies": {
-    "@types/node": "^20.12.7",
-    "@types/aws-lambda": "^8.10.137",
-    "vitest": "^1.5.0",
-    "sst": "^2.41.4"
-  }
+	"name": "@tunelite/functions",
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"test": "sst bind vitest",
+		"typecheck": "tsc -noEmit"
+	},
+	"devDependencies": {
+		"@types/aws-lambda": "^8.10.137",
+		"@types/node": "^20.12.7",
+		"sst": "^2.41.4",
+		"vitest": "^1.5.0"
+	},
+	"dependencies": {
+		"@hono/zod-validator": "^0.2.1",
+		"zod": "^3.22.4"
+	}
 }
