--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -12,7 +12,11 @@
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
     "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
+    "@tanstack/react-form": "^0.19.0",
+    "@tanstack/react-query": "^5.29.2",
+    "@tanstack/react-router": "^1.27.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.368.0",
@@ -24,6 +28,8 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
+    "@tanstack/router-devtools": "^1.27.0",
+    "@tanstack/router-vite-plugin": "^1.26.21",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
