--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "@tunelite/core",
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "test": "sst bind vitest",
-    "typecheck": "tsc -noEmit"
-  },
-  "devDependencies": {
-    "vitest": "^1.5.0",
-    "@types/node": "^20.12.7",
-    "sst": "^2.41.4"
-  },
-  "dependencies": {
-    "zod": "^3.22.4"
-  }
+	"name": "@tunelite/core",
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"test": "sst bind vitest",
+		"typecheck": "tsc -noEmit",
+		"generate": "drizzle-kit generate:pg"
+	},
+	"devDependencies": {
+		"@types/node": "^20.12.7",
+		"drizzle-kit": "^0.20.14",
+		"sst": "^2.41.4",
+		"vitest": "^1.5.0"
+	},
+	"dependencies": {
+		"@neondatabase/serverless": "^0.9.0",
+		"drizzle-orm": "^0.30.8",
+		"zod": "^3.22.4"
+	}
 }
