--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,12 +11,14 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
+    "@kinde-oss/kinde-auth-react": "^3.0.28",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-form": "^0.19.0",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-router": "^1.27.0",
+    "@tanstack/zod-form-adapter": "^0.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "lucide-react": "^0.368.0",
