--- a/packages/functions/package.json
+++ b/packages/functions/package.json
@@ -7,6 +7,8 @@
 		"typecheck": "tsc -noEmit"
 	},
 	"devDependencies": {
+		"@aws-sdk/client-s3": "^3.554.0",
+		"@aws-sdk/s3-request-presigner": "^3.554.0",
 		"@types/aws-lambda": "^8.10.137",
 		"@types/node": "^20.12.7",
 		"sst": "^2.41.4",
