--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -18,6 +18,7 @@
     "@tanstack/react-form": "^0.19.0",
     "@tanstack/react-query": "^5.29.2",
     "@tanstack/react-router": "^1.27.0",
+    "@tanstack/react-table": "^8.16.0",
     "@tanstack/zod-form-adapter": "^0.19.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
